# moin

./: .editorconfig  .gitattributes  .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  SECURITY.md  app.yaml  appengine_main.py  babel.cfg  cli_index.py  m.py  make.py  makemoinmenu.py  moin  moin.bat  moin.py  moin.spec  pyproject.toml  quickinstall  quickinstall.bat  quickinstall.py  setup.cfg  setup.py  tox.ini  whoosh184-fix.patch  whoosh200-highlight-mode-fix.patch  wikiconfig.py  wikiconfig_gae.py
.github/: FUNDING.yml
.github/workflows/: bandit.yml  black.yaml  ci.yml  github-actions.yml
MoinMoin/: __init__.py  _template.py  app.py  appengine_main.py  conftest.py  error.py  forms.py  log.py  test_logging.conf  user.py  wikiutil.py
MoinMoin/_tests/: __init__.py  _test_template.py  ldap_testbase.py  ldap_testdata.py  maketestwiki.py  pep8.py  test_error.py  test_forms.py  test_logging.conf  test_sourcecode.py  test_test_environ.py  test_user.py  test_wikiutil.py  testitems.xml  wikiconfig.py
MoinMoin/apps/: __init__.py
MoinMoin/auth/: __init__.py  gae.py  http.py  ldap_login.py  log.py  openidrp.py  smb_mount.py
MoinMoin/config/: __init__.py  default.py
MoinMoin/constants/: __init__.py  chartypes.py  contenttypes.py  forms.py  itemtypes.py  keys.py  misc.py  namespaces.py  rights.py
MoinMoin/converter/: __init__.py  _args.py  _args_wiki.py  _table.py  _util.py  _wiki_macro.py  archive_in.py  audio_video_in.py  creole_in.py  docbook_in.py  docbook_out.py  everything.py  highlight.py  html_in.py  html_out.py  image_in.py  include.py  link.py  macro.py  markdown_in.py  mediawiki_in.py  moinwiki19_in.py  moinwiki_in.py  moinwiki_out.py  nonexistent_in.py  nowiki.py  opendocument_in.py  pdf_in.py  pygments_in.py  rst_in.py  rst_out.py  smiley.py  text_csv_in.py  text_in.py  text_out.py  xml_in.py
MoinMoin/datastruct/: __init__.py
MoinMoin/i18n/: __init__.py
MoinMoin/items/: __init__.py  blog.py  content.py  ticket.py
MoinMoin/macro/: Anchor.py  Date.py  DateTime.py  EditedSystemPages.py  FontAwesome.py  GetText.py  GetVal.py  GoTo.py  HighlighterList.py  Icon.py  InterWiki.py  MailTo.py  PageCount.py  PageSize.py  PagenameList.py  RandomItem.py  ShowIcons.py  TemplateList.py  Verbatim.py  WikiConfig.py  WikiConfigHelp.py  __init__.py  _base.py
MoinMoin/mail/: __init__.py  sendmail.py
MoinMoin/script/: __init__.py  moin.py
MoinMoin/search/: __init__.py  analyzers.py  builtin.py  indexing.py  results.py  revision_converter.py  term.py
MoinMoin/security/: __init__.py  textcha.py  ticket.py
MoinMoin/signalling/: __init__.py  log.py  signals.py
MoinMoin/static/: robots.txt
MoinMoin/storage/: __init__.py  error.py  serialization.py  terms.py
MoinMoin/templates/: 404.html  ajaxsearch.html  all.html  atom.html  base.html  basic.js  blog.html  blog_entry.html  blog_layout.html  cli_index.html  common.js  content.html  convert.html  copy.html  crash.html  delete.html  destroy.html  dictionary.js  diff.html  diff_text.html  diff_text_atom.html  dom.xml  editbar.html  error.html  forms.html  global_history.html  global_index.html  global_tags.html  highlight.html  history.html  index.html  index2.html  index_action.js  item_link_list.html  itemviews.html  layout.html  link_list_item_panel.html  link_list_no_item_panel.html  login.html  lookup.html  (+39 more)
MoinMoin/themes/: __init__.py
MoinMoin/translations/: MoinMoin.pot
MoinMoin/util/: StringIOClosing.py  SubProcess.py  __init__.py  chartypes_create.py  clock.py  crypto.py  diff3.py  diff_datastruct.py  diff_html.py  diff_text.py  edit_lock.py  filesys.py  forms.py  interwiki.py  iri.py  kvstore.py  lock.py  md5crypt.py  mime.py  mimetype.py  monkeypatch.py  notifications.py  paramparser.py  plugins.py  profile.py  pycdb.py  pysupport.py  python_compatibility.py  registry.py  rev_navigation.py  send_file.py  subscriptions.py  thread_monitor.py  tree.py  version.py
_test_artifacts/: README.rst
_ui_tests/: README.txt  config.py  conftest.py  driver_register.py  test_subitems.py  utils.py
contrib/css-build/: README.md  package.json
contrib/css-lint/: lint-prep.py
contrib/deployment/: moin-http-basic-auth.conf  moin.fcgi  moin.wsgi  test.wsgi
contrib/interwiki/: intermap.txt
contrib/logging/: email
contrib/migration/: _utils19.py  save19.py
contrib/mksupport/: mksupport.py
contrib/password-reset/: mailtemplate.txt  wikitemplate.txt
contrib/pep8/: DeleteTrailingSpaces.py  coding_std.py
contrib/pythonanywhere/: _README.txt  _pythonanywhere_com_wsgi.py  wsgi.py
contrib/sample/: Home-subitem.data  Home.data  MoinWikiMacros-Icons.data  MoinWikiMacros.data  OtherTextItems-CSV.data  OtherTextItems-Diff.data  OtherTextItems-IRC.data  OtherTextItems-PlainText.data  OtherTextItems-Python.data  OtherTextItems.data  TemplateSample.data  WikiDict.data  _README.TXT  creole.data  docbook.data  html.data  images.data  markdown.data  mediawiki.data  moin-HighlighterList.data  moin.data  rst.data  unicode.moin  users-HomePageTemplate.data  zip.data
contrib/serialized/: items.moin
contrib/sitetesting/: test_scrapy_crawl.py
contrib/wikiconfig/: wikiconfig_editme.py  wikiconfig_local.py
contrib/wsgi/: moin2.wsgi  print_hotshot_profile.py  profiler.py  proxy.py  raw_wsgi_bench.py
contrib/xml/: preloaded_items.xml
docs/: conf.py  index.rst  make.bat  requirements.txt
docs/_static/: custom.css
docs/admin/: backup.rst  buildindexes.rst  changes.rst  configure.rst  index.rst  install.rst  install_gae.rst  install_standalone.rst  maintenance.rst  password-reset.rst  requirements.rst  security.rst  serve.rst  upgrade.rst
docs/changes/: CHANGES  CHANGES.html-docbook  CHANGES.storage  CHANGES.wiki-like-formats-support
docs/devel/: create_support_archive.rst  development.rst  moinpage.rst  (+2 more)
requirements.d/: codestyle.txt  development.txt  extras.txt  ldap.txt
scripts/: coding_std.py  dos2unix.py  print_hotshot_profile.py  raw_wsgi_bench.py  wget.py
wiki_local/: README.txt
(+1524 files in other folders)
