[project]
name = "moin"
dynamic = ["version"]
authors = [{name="Juergen Hermann et al."}]
maintainers = [
    {name="RogerHaase", email="haaserd@gmail.com"},
    {name="Thomas Waldmann", email="tw@waldmann-edv.de"},
]
description = "MoinMoin is an easy to use, full-featured and extensible wiki software package"
readme = {file="README.rst", content-type="text/x-rst"}
requires-python = ">=3.9"
keywords = ["wiki", "web"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Text Processing :: Markup",
]
license = {text="GNU GPL v2 (or any later version)"}
dependencies = [
    "Babel >= 2.10.0",  # internationalization support
    "blinker >= 1.5",  # event signalling (e.g. for change notification trigger)
    "docutils >= 0.18.1",  # reST markup processing
    "Markdown >= 3.4.1",  # Markdown markup processing
    "mdx_wikilink_plus >= 1.4.1",  # Markdown Wikilinks extension
    "Flask < 2.3.0",  # micro framework
    "Flask-Babel >= 3.0.0",  # i18n support
    "Flask-Caching >= 1.2.0",  # caching support
    "Flask-Theme >= 0.3.6",  # theme support
    "emeraldtree >= 0.10.0",  # xml processing
    "feedgen == 0.9.*",  # Atom feed
    "flatland >= 0.8",  # form handling
    "Jinja2 >= 3.1.0",  # template engine
    "markupsafe <= 2.2.0",  # safe html and xml
    "pygments >= 1.4",  # src code / text file highlighting
    "Werkzeug",  # wsgi toolkit
    "whoosh >= 2.7.0",  # needed for indexed search
    "pdfminer.six",  # pdf -> text/plain conversion
    "passlib >= 1.6.0",  # strong password hashing (1.6 needed for consteq)
    "setuptools >= 51",  # dependency with setuptools_scm
    "sqlalchemy < 2.0",  # used by sqla store
    "XStatic >= 0.0.2",  # support for static file pypi packages
    "XStatic-Bootstrap == 3.1.1.2",
    "XStatic-Font-Awesome >= 6.2.1.0",
    "XStatic-CKEditor >= 3.6.1.2",
    "XStatic-autosize",
    "XStatic-jQuery >= 1.8.2",
    "XStatic-jQuery-File-Upload >= 10.31.0",
    "XStatic-svg-edit-moin >= 2012.11.15.1",
    "XStatic-JQuery.TableSorter >= 2.14.5.1",
    "XStatic-Pygments >= 1.6.0.1",
]

[project.optional-dependencies]
pillow = ["pillow"]  # successor to PIL; used by image get for scaling/rotating/etc.;
                     # requires special libs/header to be installed before it can be compiled successfully
ldap = ["python-ldap"]  # used by ldap auth; requires special libs/header
                        # to be installed before it can be compiled successfully

[project.urls]
"Homepage" = "https://moinmo.in/"
"Bug Tracker" = "https://github.com/moinwiki/moin/issues"
"Documentation" = "https://moin-20.readthedocs.io/"
"Repository" = "https://github.com/moinwiki/moin"
"Changelog" = "https://github.com/moinwiki/moin/blob/master/docs/changes/CHANGES"

[project.scripts]
moin = "moin.cli:cli"

[tool.setuptools]
# See also the MANIFEST.in file.
# We want to install all the files in the package directories...
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["_tests"]

[tool.setuptools.package-data]
"moin.translations" = ["MoinMoin.pot", "*.po", ]
"moin.static" = ["*", ]
"moin.themes.modernized" = ["*", ]
"moin.themes.basic" = ["*", ]
"moin.themes.topside" = ["*", ]
"moin.themes.topside_cms" = ["*", ]
"moin.templates" = ["*.html", "*.xml", ]
"moin.apps.admin.templates" = ["*.html", ]
"moin.apps.misc.templates" = ["*.html", "*.txt", ]

[build-system]
requires = ["setuptools", "setuptools_scm[toml] >= 6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/moin/_version.py"
