[project]
name = "moin"
dynamic = ["version"]
authors = [{name="Juergen Hermann et al."}]
maintainers = [
    {name="RogerHaase", email="haaserd@gmail.com"},
    {name="Thomas Waldmann", email="tw@waldmann-edv.de"},
]
description = "MoinMoin is an easy to use, full-featured and extensible wiki software package"
readme = {file="README.rst", content-type="text/x-rst"}
requires-python = ">=3.9"
keywords = ["wiki", "web"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Text Processing :: Markup",
]
license = {text="GNU GPL v2 (or any later version)"}
dependencies = [
    "Babel >= 2.10.0",  # internationalization support
    "blinker >= 1.6.2",  # event signalling (e.g. for change notification trigger)
    "docutils >= 0.18.1",  # reST markup processing
    "Markdown >= 3.4.1",  # Markdown markup processing
    "mdx_wikilink_plus >= 1.4.1",  # Markdown Wikilinks extension
    "Flask >= 3.0.0",  # lightweight WSGI web application framework
    "Flask-Babel >= 3.0.0",  # i18n support
    "Flask-Caching >= 1.2.0",  # caching support
    "Flask-Theme >= 0.3.6",  # theme support
    "emeraldtree >= 0.10.0",  # xml processing
    "feedgen >= 0.9.0",  # Atom feed
    "flatland >= 0.8",  # form handling
    "Jinja2 >= 3.1.0",  # template engine
    "markupsafe <= 2.2.0",  # safe html and xml
    "pygments >= 1.4",  # src code / text file highlighting
    "Werkzeug >= 3.0.0",  # WSGI toolkit
    "whoosh >= 2.7.0",  # needed for indexed search
    "pdfminer.six",  # pdf -> text/plain conversion
    "passlib >= 1.6.0",  # strong password hashing (1.6 needed for consteq)
    "sqlalchemy >= 2.0",  # used by sqla store
    "XStatic >= 0.0.2",  # support for static file pypi packages
    "XStatic-Bootstrap == 3.1.1.2",
    "XStatic-Font-Awesome >= 6.2.1.0",
    "XStatic-CKEditor >= 3.6.1.2",
    "XStatic-autosize",
    "XStatic-jQuery >= 1.8.2",
    "XStatic-jQuery-File-Upload >= 10.31.0",
    "XStatic-svg-edit-moin >= 2012.11.15.1",
    "XStatic-JQuery.TableSorter >= 2.14.5.1",
    "XStatic-Pygments >= 1.6.0.1",
]

[project.optional-dependencies]
pillow = ["pillow"]  # successor to PIL; used by image get for scaling/rotating/etc.;
                     # requires special libs/header to be installed before it can be compiled successfully
ldap = ["python-ldap"]  # used by ldap auth; requires special libs/header
                        # to be installed before it can be compiled successfully

[project.urls]
"Homepage" = "https://moinmo.in/"
"Bug Tracker" = "https://github.com/moinwiki/moin/issues"
"Documentation" = "https://moin-20.readthedocs.io/"
"Repository" = "https://github.com/moinwiki/moin"
"Changelog" = "https://github.com/moinwiki/moin/blob/master/docs/changes/CHANGES"

[project.scripts]
moin = "moin.cli:cli"

[tool.setuptools]
# See also the MANIFEST.in file.
# We want to install all the files in the package directories...
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["_tests"]

[tool.setuptools.package-data]
"moin.translations" = ["MoinMoin.pot", "*.po", ]
"moin.static" = ["*", ]
"moin.themes.modernized" = ["*", ]
"moin.themes.basic" = ["*", ]
"moin.themes.topside" = ["*", ]
"moin.themes.topside_cms" = ["*", ]
"moin.templates" = ["*.html", "*.xml", ]
"moin.apps.admin.templates" = ["*.html", ]
"moin.apps.misc.templates" = ["*.html", "*.txt", ]

[build-system]
requires = ["setuptools", "setuptools_scm[toml] >= 6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/moin/_version.py"

[tool.black]
line-length = 120
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
norecursedirs = [".git", "_build", "tmp*", "env*", "dlc", "wiki", "support"]


[tool.ruff]
line-length = 120
target-version = "py39"

# Exclude a variety of commonly ignored directories.
exclude = [
    "contrib",
    ".cache",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".idea",
    ".ruff_cache",
    ".tox",
    "build",
    "dist",
]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]

ignore = ["F405", "E401", "E402", "E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Code style violation exceptions:
# please note that the values are adjusted so that they do not cause failures
# with existing code. if you want to change them, you should first fix all
# ruff failures that appear with your change.
[tool.ruff.lint.per-file-ignores]
"scripts/coding_std.py" = ["E713"]
"docs/conf.py" = ["F401"]  # sphinx config, automatically generated
"src/moin/utils/SubProcess.py" = ["F401", "F821"]  # 3rd party stuff, patched stdlib code
"src/moin/config/default.py" = ["F401", "F403"]
"src/moin/datastructures/__init__.py" = ["F401"]

[tool.tox]
legacy_tox_ini = """
# tox configuration - if you change anything here, run this to verify:
# tox --recreate

# run like this:
# tox
# tox -e py39
# tox -- -v -k test_wikiutil
# tox -- -v

[tox]
envlist = py{39,310,311,312},ruff

[testenv]
deps = -rrequirements.d/development.txt
setenv =
    # some tests expect a specific order in dicts...
    PYTHONHASHSEED = 0
    # needed so that lxml can build from source (e.g. on pypy):
    CFLAGS = -I/usr/include/libxml2
commands = pytest -rs --pyargs {posargs:moin}

[testenv:ruff]
skip_sdist=true
skip_install=true
changedir =
deps =
    ruff
commands = ruff check .
"""
